Make sure the sticky table header is visible when sites contain a locked header

--- a/less/core/common.less
+++ b/less/core/common.less
@@ -303,3 +303,11 @@ form[action*='/tblock/order'] .views-field-field-image-fid a.imagecache {
   font-size: @base_font_size;
 }
 
+// Fixed table headings
+table.sticky-header {
+  margin-top: @mobile-header-height;
+
+  @media (min-width: @desktop-breakpoint) {
+    margin-top: @desktop-header-height;
+  }
+}
